# VuLnBridge

./: .gitignore  ARD.md  PRD.md  README.md  SETUP.md  pyrightconfig.json
backend/: DEVELOPER_FEEDBACK_FIXES.md  Dockerfile  T3N_CONTRACT_DEPLOYMENT_GUIDE.md  db.sqlite3  deploy-contract.mjs  manage.py  package-lock.json  package.json  pyrightconfig.json  requirements.txt  t3n_helper.mjs
backend/authority/: models.py
backend/authority/migrations/: 0001_initial.py  0002_authoritygrant_agent_did_authoritygrant_t3n_proof.py
backend/cases/: models.py  serializers.py  urls.py  views.py
backend/cases/migrations/: 0001_initial.py  0002_alter_vulnerabilitycase_affected_systems_and_more.py
backend/config/terminal3/: config.ini
backend/vulnbridge/: __init__.py  consumers.py
backend/vulnbridge/authority/: __init__.py  models.py  urls.py  views.py
backend/vulnbridge/integrations/: __init__.py  terminal3_client.py
backend/vulnbridge/workflow/: vulnerability_workflow.py
backend/vulnbridge_project/: asgi.py  settings.py  urls.py  wsgi.py
backend/vulnbridge_project/terminal3/authority-checker/: Cargo.toml  README.md  expanded.rs  world.wit
backend/vulnbridge_project/terminal3/authority-checker/src/: lib.rs
backend/vulnbridge_project/terminal3/authority-checker/wit/: world.wit
frontend/: .stylelintrc.json  package-lock.json  package.json  postcss.config.js
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: AuditLog.tsx  AuthorityCard.tsx  AuthorityPanel.tsx  RevocationBanner.tsx  VulnerabilityForm.tsx  WorkflowTimeline.tsx
(+11 files in other folders)
